// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importTraceEvents multiprocess 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p0 (pid 0), p0t0 (tid 0)",
  "stacks": Array [
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p0 (pid 0), p0t1 (tid 1)",
  "stacks": Array [
    "beta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 3`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma",
      "line": undefined,
      "name": "gamma",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p1 (pid 1), p1t0 (tid 0)",
  "stacks": Array [
    "gamma 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess 4`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "delta",
      "line": undefined,
      "name": "delta",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "p1 (pid 1), p1t1 (tid 1)",
  "stacks": Array [
    "delta 1.00µs",
  ],
}
`;

exports[`importTraceEvents multiprocess: indexToView 1`] = `0`;

exports[`importTraceEvents multiprocess: profileGroup.name 1`] = `"multiprocess.json"`;

exports[`importTraceEvents simple 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "alpha",
      "line": undefined,
      "name": "alpha",
      "selfWeight": 2,
      "totalWeight": 14,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "beta",
      "line": undefined,
      "name": "beta",
      "selfWeight": 3,
      "totalWeight": 12,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "gamma",
      "line": undefined,
      "name": "gamma",
      "selfWeight": 5,
      "totalWeight": 5,
    },
    Frame {
      "col": undefined,
      "file": undefined,
      "key": "epsilon",
      "line": undefined,
      "name": "epsilon",
      "selfWeight": 4,
      "totalWeight": 4,
    },
  ],
  "name": "pid 0, tid 0",
  "stacks": Array [
    "alpha 1.00µs",
    "alpha;beta 1.00µs",
    "alpha;beta;gamma 5.00µs",
    "alpha;beta;epsilon 4.00µs",
    "alpha;beta 2.00µs",
    "alpha 1.00µs",
  ],
}
`;

exports[`importTraceEvents simple: indexToView 1`] = `0`;

exports[`importTraceEvents simple: profileGroup.name 1`] = `"simple.json"`;
